Updating behind js

--- a/08-How JS work/notes.html
+++ b/08-How JS work/notes.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>Pig Game</title>
+    <script src="script.js"></script>
+    <title>How JS Work</title>
   </head>
   <body>
     <h1 class="heading">What is Javascript</h1>
